--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,10 +1,31 @@
 .home-container{
-    background-image: url("/background/sharebg4.jpg");
-    width: 100% ;
-    height: 100vh;
-    background-size: cover;
+    /*background-image: url("../assets/loading/PreLoading_atlas1.png");*/
+    background-size: 100% auto;
+    width: 932px;
+    height: 430px;
     background-repeat: no-repeat;
-    position: relative; /* 添加这一行 */
+    background-position: center; /* 新增 */
+    position: absolute; /* 添加这一行 */
+    top: 50%; /* 新增 */
+    left: 50%; /* 新增 */
+    transform: translate(-50%, -50%); /* 新增 */
+    display: flex;
+    align-items: center; /* 垂直居中内容 */
+    justify-content: center; /* 水平居中内容 */
+}
+.home-container::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("../assets/loading/PreLoading_atlas1.png");
+    background-size: 142% 142%;
+    background-position: 22%;
+    z-index: -1;
+    width: 932px;
+    z-index: -1;
 }
 
 /* 为黄色按钮添加样式 */
@@ -27,7 +48,18 @@
     justify-content: center; /* 水平居中 */
 }
 
-/*!* 可以添加一个悬停效果 *!*/
-/*.yellow-button:hover {*/
-/*  background-color: #ffeb3b; !* 悬停时颜色变浅 *!*/
-/*}*/
+
+
+.guest-login {
+    background-image: url(src/assets/lanzh/guest_login.png);
+    width: 100px;
+    height: 31px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    font-weight: bold;
+    text-align: center;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
